# dsync

./: .env.example  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml
scripts/: package-release.sh
src/: cli.rs  lib.rs  main.rs  ui.rs
src/application/: mod.rs
src/domain/: document.rs  markdown.rs  mod.rs
src/integrations/: git.rs
src/providers/: google_docs.rs  linear.rs  mod.rs
tests/: cli_e2e.rs
